k8s/overlays/production/scraper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-svc
  namespace: lab
  labels:
    app: scraper
spec:
  selector:
    app: scraper
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
